--- a/configuration/dracut.conf
+++ b/configuration/dracut.conf
@@ -1,14 +1,15 @@
 dracutmodules+="bash systemd systemd-initrd i18n drm plymouth clevis clevis-pin-tpm2 btrfs crypt dm kernel-modules kernel-modules-extra udev-rules dracut-systemd base fs-lib shutdown"
-compress="zstd"
-tmpdir="/tmp/dracut/"
+compress="gzip"
+tmpdir="/tmp/"
 use_fstab="yes"
+fscks="umount mount /sbin/fsck btrfsck"
 add_fstab+="/etc/fstab"
 mdadmconf="no"
 lvmconf="no"
-kernel_cmdline=""
+kernel_cmdline="rd.luks.name=XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX=nvme0n1p2_crypt rd.luks.name=XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX=sda2_crypt rd.luks.key=YYYYYYY-YYYY-YYYY-YYYY-YYYYYYYYYYYY=/nvme0n1p2_luks.key:UUID=ZZZZZZZZ-ZZZZ-ZZZZ-ZZZZ-ZZZZZZZZZZZZ rd.luks.key=XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX=/sda2_luks.key:UUID=ZZZZZZZZ-ZZZZ-ZZZZ-ZZZZ-ZZZZZZZZZZZZ rd.luks.options=XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX=keyfile-timeout=10s root=/dev/mapper/nvme0n1p2_crypt rw rootflags=subvol=@ quiet splash loglevel=3 rd.udev.log_priority=3 vt.global_cursor_default=0"
 early_microcode="yes"
 show_modules="yes"
 uefi_stub="/usr/lib/systemd/boot/efi/linuxx64.efi.stub"
 uefi_splash_image="/usr/share/systemd/bootctl/splash-arch.bmp"
-uefi_secureboot_cert="/boot/_build_EFISTUB/cert/",uefi_secureboot_key="/boot/_build_EFISTUB/keys/"
+uefi_secureboot_cert="/root/keys/db.crt",uefi_secureboot_key="/root/keys/db.key"
 kernel_image="/boot/vmlinuz-linux"
