--- a/configuration/dracut.conf
+++ b/configuration/dracut.conf
@@ -1,4 +1,4 @@
-dracutmodules+=" bash systemd systemd-initrd i18n drm plymouth clevis clevis-pin-tpm2 btrfs crypt dm kernel-modules k>
+dracutmodules+='bash systemd systemd-initrd i18n drm plymouth clevis clevis-pin-tpm2 btrfs crypt dm kernel-modules kernel-modules-extra udev-rules dracut-systemd base fs-lib shutdown'
 hostonly=yes
 hostonly_cmdline=no
 use_fstab=yes
