update all project

--- a/configuration/dracut.conf
+++ b/configuration/dracut.conf
@@ -4,12 +4,12 @@ hostonly_cmdline=no
 use_fstab=yes
 mdadmconf=no
 lvmconf=no
-kernel_cmdline="rd.luks.name=XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX=nvme0n1p2_crypt rd.luks.name=XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX=sda2_crypt rd.luks.key=YYYYYYY-YYYY-YYYY-YYYY-YYYYYYYYYYYY=/nvme0n1p2_luks.key:UUID=ZZZZZZZZ-ZZZZ-ZZZZ-ZZZZ-ZZZZZZZZZZZZ rd.luks.key=XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX=/sda2_luks.key:UUID=ZZZZZZZZ-ZZZZ-ZZZZ-ZZZZ-ZZZZZZZZZZZZ rd.luks.options=XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX=keyfile-timeout=10s root=/dev/mapper/nvme0n1p2_crypt rw rootflags=subvol=@ quiet splash loglevel=3 rd.udev.log_priority=3 vt.global_cursor_default=0"
+kernel_cmdline="rd.luks.name=YOUR_UUID=nvme0n1p2_crypt root=/dev/mapper/nvme0n1p2_crypt rw rootflags=subvol=@ quiet splash loglevel=3 rd.udev.log_priority=3 vt.global_cursor_default=0"
 early_microcode=yes
 show_modules=yes
 uefi=yes
 early_microcode=yes
 uefi_stub=/usr/lib/systemd/boot/efi/linuxx64.efi.stub
 uefi_splash_image=/usr/share/systemd/bootctl/splash-arch.bmp
-uefi_secureboot_cert=/run/media/vlad/PASS/UEFI_SIGNATURE_KEY/db.crt
-uefi_secureboot_key=/run/media/vlad/PASS/UEFI_SIGNATURE_KEY/db.key
+uefi_secureboot_cert=/run/media/USERNAME/LABEL_DEVICE/UEFI_SIGNATURE_KEY/db.crt
+uefi_secureboot_key=/run/media/USERNAME/LABEL_DEVICE/UEFI_SIGNATURE_KEY/db.key
