--- a/configuration/dracut.conf
+++ b/configuration/dracut.conf
@@ -1,15 +1,17 @@
-dracutmodules+='bash systemd systemd-initrd i18n drm plymouth clevis clevis-pin-tpm2 btrfs crypt dm kernel-modules kernel-modules-extra udev-rules dracut-systemd base fs-lib shutdown'
+dracutmodules+='bash systemd systemd-initrd i18n drm plymouth clevis clevis-pin-tpm2 btrfs crypt dm kernel-modules ke>
 hostonly=yes
 hostonly_cmdline=no
 use_fstab=yes
+i18n_install_all=no
+i18n_vars="/etc/conf.d/keymaps:KEYMAP /etc/conf.d/consolefont:FONT"
 mdadmconf=no
 lvmconf=no
-kernel_cmdline="rd.luks.name=YOUR_UUID=nvme0n1p2_crypt root=/dev/mapper/nvme0n1p2_crypt rw rootflags=subvol=@ quiet splash loglevel=3 rd.udev.log_priority=3 vt.global_cursor_default=0"
+kernel_cmdline="rd.luks.name=172b1978-c7fd-48f7-a452-bec63af59ac9=nvme0n1p2_crypt root=/dev/mapper/nvme0n1p2_crypt rw>
 early_microcode=yes
 show_modules=yes
 uefi=yes
 early_microcode=yes
 uefi_stub=/usr/lib/systemd/boot/efi/linuxx64.efi.stub
 uefi_splash_image=/usr/share/systemd/bootctl/splash-arch.bmp
-uefi_secureboot_cert=/run/media/USERNAME/LABEL_DEVICE/UEFI_SIGNATURE_KEY/db.crt
-uefi_secureboot_key=/run/media/USERNAME/LABEL_DEVICE/UEFI_SIGNATURE_KEY/db.key
+uefi_secureboot_cert=/run/media/tush17/PASS/UEFI_SIGNATURE_KEY/db.crt
+uefi_secureboot_key=/run/media/tush17/PASS/UEFI_SIGNATURE_KEY/db.key
